# Core

./: .gitignore  README.md  platformio.ini  west.yml
zephyr/: .gitignore  CMakeLists.txt  nucleo_g474re.cfg  nucleo_g474re.overlay  platformio-extra.py  prj.conf
zephyr/boards/: nucleo_g474re.conf  nucleo_g474re.overlay  owntech_board.json  readme.md  spin.json
zephyr/boards/arm/owntech_board/: Kconfig.board  Kconfig.defconfig  owntech_board.dts  owntech_board.yaml
zephyr/boards/arm/owntech_board/dts/: adc-channels.dtsi  adc.dtsi  can-standby-switch.dtsi  gpio.dtsi  hrtim.dtsi  ngnd.dtsi  pinctrl.dtsi
zephyr/boards/arm/spin/: Kconfig.board  Kconfig.defconfig  board.cmake  gpio.dtsi  spin.dts  spin.yaml  spin_defconfig  spin_header.dtsi
zephyr/boards/owntech/spin/: Kconfig.defconfig  Kconfig.spin  board.cmake  board.yml  spin.dts  spin.yaml  spin_defconfig  spin_header.dtsi
zephyr/boards/shields/LFE/: Kconfig.shield  lfe_demo_v0_0_1.overlay  sensors.dtsi
zephyr/boards/shields/o2/: Kconfig.shield  o2_v1_1_2.conf  o2_v1_1_2.overlay
zephyr/boards/shields/ownverter/: Kconfig.shield  ownverter_v0_9_0.conf  ownverter_v0_9_0.overlay  ownverter_v1_0_0.conf  ownverter_v1_0_0.overlay  ownverter_v1_1_0.conf  ownverter_v1_1_0.overlay
zephyr/boards/shields/twist/: Kconfig.shield  adc-channels.dtsi  can-standby-switch.dtsi  can.dtsi  ngnd.dtsi  pwm_legs.dtsi  safety-thresholds.dtsi  sensors.dtsi  twist.overlay  twist_v1_2_0.conf  twist_v1_2_0.overlay  twist_v1_3_0.conf  twist_v1_3_0.overlay  twist_v1_4_0.conf  twist_v1_4_0.overlay  twist_v1_4_1.conf  twist_v1_4_1.overlay  twist_v1_4_2.conf  twist_v1_4_2.overlay
zephyr/dts/: adc-channels.dtsi  adc.dtsi  hrtim.dtsi  led.dtsi  ngnd.dtsi  pinctrl.dtsi  pinout.dtsi
zephyr/dts/bindings/: adc-channels.yaml  adc-inputs.yaml  gpio-device.yaml  hrtim.yaml  ngnd-gpio.yaml  ngnd-switch.yaml  power-leg.yaml  safety-thresholds.yaml  shield-pcb.yaml  shield-sensors.yaml
zephyr/dts/bindings/gpio/: spin-header.yaml
zephyr/modules/owntech_adc_driver/zephyr/: CMakeLists.txt  Kconfig  module.yml
zephyr/modules/owntech_adc_driver/zephyr/public_api/: adc.c  adc.h  adc_enums.h  adc_error_codes.h
zephyr/modules/owntech_adc_driver/zephyr/src/: adc_channels.c  adc_channels.h  adc_core.c  adc_core.h  adc_helper.c  adc_helper.h
zephyr/modules/owntech_communication/zephyr/: CMakeLists.txt  Kconfig  module.yml
zephyr/modules/owntech_communication/zephyr/public_api/: CanCommunication.cpp  CanCommunication.h  CommunicationAPI.cpp  CommunicationAPI.h  Rs485Communication.cpp  Rs485Communication.h  SyncCommunication.cpp  SyncCommunication.h
zephyr/modules/owntech_communication/zephyr/src/: AnalogCommunication.cpp  AnalogCommunication.h  CanCommunication.cpp  CanCommunication.h  Rs485.cpp  Rs485.h  Rs485Communication.cpp  Rs485Communication.h  SyncCommunication.cpp  SyncCommunication.h  can.cpp  can.h  data_objects.cpp  data_objects.h  sync.cpp  sync.h  thingset_can.c  thingset_isotp.cpp  thingset_pub_sub.cpp
zephyr/modules/owntech_comparator_driver/zephyr/: CMakeLists.txt  Kconfig  module.yml
zephyr/modules/owntech_comparator_driver/zephyr/public_api/: comparator.c  comparator.h
zephyr/modules/owntech_comparator_driver/zephyr/public_include/: comparator.h
zephyr/modules/owntech_comparator_driver/zephyr/src/: comparator_driver.c  comparator_driver.h
zephyr/modules/owntech_dac_driver/zephyr/: CMakeLists.txt  Kconfig  module.yml
zephyr/modules/owntech_dac_driver/zephyr/public_api/: dac.h
zephyr/modules/owntech_dac_driver/zephyr/public_include/: dac.h
zephyr/modules/owntech_dac_driver/zephyr/src/: owntech_dac_configure.c  stm32_dac_driver.c  stm32_dac_driver.h
zephyr/modules/owntech_data_acquisition/zephyr/: CMakeLists.txt  Kconfig  data_acquisition.c  data_acquisition.h  module.yml
zephyr/modules/owntech_data_acquisition/zephyr/adc/: adc.c  adc.h  adc_channels.c  adc_channels.h  adc_channels_private.h  adc_core.c  adc_core.h  adc_helper.c  adc_helper.h
zephyr/modules/owntech_data_acquisition/zephyr/adc_to_mem/: data_dispatch.c  data_dispatch.cpp  data_dispatch.h  dma.c  dma.cpp  dma.h
zephyr/modules/owntech_data_acquisition/zephyr/data_conversion/: data_conversion.c  data_conversion.cpp  data_conversion.h
zephyr/modules/owntech_data_acquisition/zephyr/data_dispatch/: data_dispatch.c  data_dispatch.h
zephyr/modules/owntech_data_acquisition/zephyr/dma/: dma.c  dma.h
zephyr/modules/owntech_data_acquisition/zephyr/public_api/: DataAcquisition.cpp  DataAcquisition.h  data_acquisition_error_codes.h  data_acquisition_internal.h
zephyr/modules/owntech_data_acquisition/zephyr/public_include/: data_acquisition.h
zephyr/modules/owntech_data_api/zephyr/: CMakeLists.txt  Kconfig  module.yml
zephyr/modules/owntech_flash_driver/zephyr/: CMakeLists.txt  Kconfig  module.yml
zephyr/modules/owntech_gpio_api/zephyr/: CMakeLists.txt  Kconfig  module.yml
zephyr/modules/owntech_hardware_configuration/zephyr/: CMakeLists.txt  Kconfig  module.yml
zephyr/modules/owntech_hrtim_driver/zephyr/: CMakeLists.txt  Kconfig  hrtim.h  module.yml  owntech_hrtim_driver.c
zephyr/modules/owntech_leg_driver/zephyr/: CMakeLists.txt  Kconfig  leg.h  module.yml  owntech_leg_driver.c  owntech_leg_driver.h
zephyr/modules/owntech_ngnd_driver/zephyr/: CMakeLists.txt  Kconfig  module.yml  ngnd.h
zephyr/modules/owntech_power_api/zephyr/: CMakeLists.txt  Kconfig  module.yml
zephyr/modules/owntech_safety_api/zephyr/: CMakeLists.txt  Kconfig  module.yml
zephyr/modules/owntech_scheduling/zephyr/: CMakeLists.txt  Kconfig  module.yml
zephyr/modules/owntech_shield_api/zephyr/: CMakeLists.txt  Kconfig  module.yml
zephyr/modules/owntech_spin_api/zephyr/: CMakeLists.txt  Kconfig  module.yml
zephyr/modules/owntech_task_api/zephyr/: CMakeLists.txt  Kconfig  module.yml
zephyr/modules/owntech_timer_driver/zephyr/: CMakeLists.txt  Kconfig  module.yml  stm32_timer_driver.c  stm32_timer_driver.h
zephyr/modules/owntech_vrefbuf_driver/zephyr/: CMakeLists.txt  Kconfig  module.yml
zephyr/scripts/: pre_bootloader_serial.py  upload_signed_firmware.py
(+229 files in other folders)
